--- a/App1/src/app/painel/painel.component.html
+++ b/App1/src/app/painel/painel.component.html
@@ -2,27 +2,27 @@
     <div class="jumbotron">
         <div class="row">
             <div class="col-sm-6">
-                <app-progresso></app-progresso>
+                <app-progresso [progresso]="progresso"></app-progresso>
             </div>
             <div class="col-sm-6">
                 <div class="d-flex justify-content-end">
-                    <app-tentativas></app-tentativas>
+                    <app-tentativas [tentativas]="tentativas"></app-tentativas>
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="col">
-                <h6>Traduza a frase:</h6>
-                <p>how are you?</p>
+                <h6>{{ instrucao }}</h6>
+                <p>{{ rodadaFrase.fraseEng }}</p>
                 <div class="form-group">
-                    <textarea rows="3" class="form-control"></textarea>
+                    <textarea rows="3" class="form-control" (input)="atualizaResposta($event)" [value]="resposta"></textarea>
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="col">
                 <div class="d-flex justify-content-end">
-                    <button class="btn btn-primary">Verificar</button>
+                    <button class="btn btn-primary" (click)="verificaResposta()">Verificar</button>
                 </div>
             </div>
         </div>
