--- a/App2/src/app/rodape/rodape.component.html
+++ b/App2/src/app/rodape/rodape.component.html
@@ -1,4 +1,4 @@
-<div class="fixed-bottom">
+<div>
   <div class="row">
     <div class="container">
       <span>Termos de uso | Política de Privacidade</span>
