Correções em oferta.component

--- a/App2/src/app/oferta/oferta.component.html
+++ b/App2/src/app/oferta/oferta.component.html
@@ -10,7 +10,7 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="img_capa">
-                    <img [src]="oferta.imagens[0].url" />
+                    <img [src]="imagemDestaque" />
                 </div>
 
                 <div class="thumbnails">
