--- a/App2/src/app/topo/topo.component.html
+++ b/App2/src/app/topo/topo.component.html
@@ -1,27 +1,29 @@
 <div class="fixed-top">
-  <nav class="navbar navbar-light bg-faded" style="background-color: white;">
-    <div class="container">
-      <a routerLink="" class="navbar-brand">
-        <img src="/assets/logo.png" />
-      </a>
-      <a a href="#"><img src="/assets/carrinho.png" /></a>
+    <nav class="navbar navbar-expand-md navbar-light bg-light">
+        <div class="container">
+            <a routerLink="" class="navbar-brand">
+                <img src="/assets/logo.png" />
+            </a>
+            <input style="margin-right: 30px;" type="text" 
+            placeholder="Pesquise por ofertas..." class="form-control" 
+            #termoDaPesquisa
+            (keyup)="pesquisa(termoDaPesquisa.value)" />
+            <a a href="#"><img src="/assets/carrinho.png" /></a>
+        </div>
+    </nav>
+    <div class="menu">
+        <div class="container">
+            <ul class="nav">
+                <li class="nav-item">
+                    <a class="nav-link" routerLinkActive="active" routerLink="/restaurantes">Restaurantes</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLinkActive="active" routerLink="/diversao">Diversão</a>
+                </li>
+            </ul>
+        </div>
     </div>
-  </nav>
-
-  <div class="menu">
-    <div class="container">
-      <ul class="nav">
-        <li class="nav-item">
-          <a class="nav-link" routerLinkActive="active" routerLink="/restaurantes">Restaurantes</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLinkActive="active" routerLink="/diversao">Diversão</a>
-        </li>
-      </ul>
-    </div>
-  </div>
 </div>
-
 <div class="banner">
-  <img src="/assets/banners/img_1.jpg" />
+    <img src="/assets/banners/img_1.jpg" />
 </div>
