--- a/App2/src/app/topo/topo.component.html
+++ b/App2/src/app/topo/topo.component.html
@@ -1,16 +1,30 @@
-<div class="fixed-top">
-    <nav class="navbar navbar-expand-md navbar-light bg-light">
-        <div class="container">
-            <a routerLink="" class="navbar-brand">
-                <img src="/assets/logo.png" />
-            </a>
-            <input style="margin-right: 30px;" type="text" 
-            placeholder="Pesquise por ofertas..." class="form-control" 
-            #termoDaPesquisa
-            (keyup)="pesquisa(termoDaPesquisa.value)" />
-            <a a href="#"><img src="/assets/carrinho.png" /></a>
+<div class="fixed-top navbar-expand-md navbar-light bg-light">
+    <div class="container" style="margin-top: 30px;">
+        <div class="row">
+            <div class="col-md-3" style="padding-bottom: 20px;">
+                <a routerLink="" class="navbar-brand">
+                    <img class="img-fluid" src="/assets/logo.png" />
+                </a>
+            </div>
+            <div class="col-md-7" style="padding-top: 10px;">
+
+                <input style="margin-right: 30px;" type="text" placeholder="Pesquise por ofertas..."
+                    class="form-control" #termoDaPesquisa (keyup)="pesquisa(termoDaPesquisa.value)" />
+
+                <ul class="list-group" style="position: absolute; z-index: 999;">
+                    <li class="list-group-item" *ngFor="let oferta of ofertas | async">
+                        <a [routerLink]="['/oferta', oferta.id]" (click)="limpaPesquisa()">
+                            {{ oferta.titulo | descricaoReduzida:15 }}
+                        </a>
+                    </li>
+                </ul>
+                
+            </div>
+            <div style="padding-top: 5px;" class="col-md-2">
+                <a a href="#"><img class="img-fluid" src="/assets/carrinho.png" /></a>
+            </div>
         </div>
-    </nav>
+    </div>
     <div class="menu">
         <div class="container">
             <ul class="nav">
