--- a/App2/src/app/ordem-compra/ordem-compra.component.html
+++ b/App2/src/app/ordem-compra/ordem-compra.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="ordem-compra">
-    <form>
+    <form novalidate>
     
       <h5>Sua Compra</h5>
       <hr />
@@ -69,18 +69,39 @@
       <div class="form-row">
 
         <div class="form-group col-md-6">
-          <input type="text" class="form-control is-invalid" placeholder="Endereço" autocomplete="off" minlength="5" required>
+          <input type="text" 
+          class="form-control {{ enderecoEstadoPrimitivo ? '' : (enderecoValido ? 'is-valid' : 'is-invalid') }}" 
+          placeholder="Endereço" 
+          autocomplete="off" 
+          minlength="5" 
+          #inputEndereco
+          (input)="atualizaEndereco(inputEndereco.value)"
+          [value]="endereco"
+          required>
           <div class="invalid-feedback">Endereço inválido</div>
         </div>
 
         <div class="form-group col-md-2">
-          <input type="text" class="form-control is-valid" placeholder="Número" autocomplete="off" minlength="1" required>
-          <br />
-          <small class="form-text text-muted">Ok</small>
+          <input type="text" 
+          class="form-control {{ numeroEstadoPrimitivo ? '' : (numeroValido ? 'is-valid' : 'is-invalid') }}" 
+          placeholder="Número" 
+          autocomplete="off" 
+          minlength="1" 
+          required
+          #inputNumero
+          (input)="atualizaNumero(inputNumero.value)"
+          [value]="numero">
+          <div class="invalid-feedback">Número inválido</div>
         </div>
 
         <div class="form-group col-md-4">
-          <input type="text" class="form-control" placeholder="Complemento" autocomplete="off">
+          <input type="text" 
+          class="form-control {{ complementoEstadoPrimitivo ? '' : (complementoValido ? 'is-valid' : '') }}" 
+          placeholder="Complemento" 
+          autocomplete="off"
+          #inputComplemento
+          (input)="atualizaComplemento(inputComplemento.value)"
+          [value]="complemento">
         </div>
 
       </div>
@@ -92,10 +113,12 @@
       <div class="form-row">
           
         <div class="form-group col-md-3">
-          <select class="form-control is-invalid">
-            <option>Selecione uma opção</option>
-            <option>Dinheiro</option>
-            <option>Débito</option>
+          <select class="form-control {{ formaPagamentoEstadoPrimitivo ? '' : (formaPagamentoValido ? 'is-valid' : 'is-invalid') }}"
+          #selectFormaPagamento
+          (change)="atualizaFormaPagamento(selectFormaPagamento.value)">
+            <option value="">Selecione uma opção</option>
+            <option value="dinheiro" selected="{{ formaPagamento == 'dinheiro' ? 'selected' : '' }}">Dinheiro</option>
+            <option value="debito" selected="{{ formaPagamento == 'debito' ? 'selected' : '' }}">Débito</option>
           </select>
 
           <div class="invalid-feedback">Selecione uma forma de pagamento</div>
