--- a/App2/src/app/ordem-compra/ordem-compra.component.html
+++ b/App2/src/app/ordem-compra/ordem-compra.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <div class="ordem-compra">
+    <div class="ordem-compra" *ngIf="idPedidoCompra === undefined">
         <form novalidate>
 
             <h5>Sua Compra</h5>
@@ -144,5 +144,8 @@
                 Cofirmar compra
             </button>
         </form>
+    </div>
+    <div class="ordem-compra" *ngIf="idPedidoCompra !== undefined">
+        <app-ordem-compra-sucesso [idPedidoCompra]="idPedidoCompra"></app-ordem-compra-sucesso>
     </div>
 </div>
