--- a/App2/src/app/ordem-compra/ordem-compra.component.html
+++ b/App2/src/app/ordem-compra/ordem-compra.component.html
@@ -1,114 +1,136 @@
 <div class="container">
-    <div class="ordem-compra" *ngIf="idPedidoCompra === undefined">
-        <form novalidate #formulario="ngForm" (ngSubmit)="confirmarCompra()">
+  <div class="ordem-compra" *ngIf="idPedidoCompra === undefined">
+    <form novalidate [formGroup]="formulario" (ngSubmit)="confirmarCompra()">
+    
+      <h5>Sua Compra</h5>
+      <hr />
 
-            <h5>Sua Compra</h5>
-            <hr />
+      <div class="form-row" style="background: #FAFAFA; padding: 20px; border-bottom: solid 1px #F0F0F0">
+        <div class="form-group col-sm-1">
+          <img src="/assets/ofertas/1/img1.jpg" class="img-fluid">
+        </div>
+        <div class="form-group col-sm-6">
+          Super Burger
+          <br />
+          Rodízio de Mini-hambúrger com opção de entrada.
+        </div>
 
-            <div class="form-row" style="background: #FAFAFA; padding: 20px; border-bottom: solid 1px #F0F0F0">
-                <div class="form-group col-sm-1">
-                    <img src="/assets/ofertas/1/img1.jpg" class="img-fluid">
-                </div>
-                <div class="form-group col-sm-6">
-                    Super Burger
-                    <br />
-                    Rodízio de Mini-hambúrger com opção de entrada.
-                </div>
-
-                <div>
-                    <div class="row">
-                        <div class="col">
-                            <button type="button" class="btn btn-link">-</button>
-                            1
-                            <button type="button" class="btn btn-link">+</button>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="form-group col-sm-3 d-flex justify-content-end">
-                    29.90
-                </div>
+        <div>
+          <div class="row">
+            <div class="col">
+              <button type="button" class="btn btn-link">-</button>
+              1
+              <button type="button" class="btn btn-link">+</button>
             </div>
+          </div>
+        </div>
 
-            <div class="form-row" style="background: #FAFAFA; padding: 20px; border-bottom: solid 1px #F0F0F0">
-                <div class="form-group col-sm-1">
-                    <img src="/assets/ofertas/4/img1.jpg" class="img-fluid">
-                </div>
-                <div class="form-group col-sm-6">
-                    Estância das águas
-                    <br />
-                    Diversão garantida com piscinas, trilhas e muito mais.
-                </div>
+        <div class="form-group col-sm-3 d-flex justify-content-end">
+          29.90
+        </div>
+      </div>
+      
+      <div class="form-row" style="background: #FAFAFA; padding: 20px; border-bottom: solid 1px #F0F0F0">
+        <div class="form-group col-sm-1">
+          <img src="/assets/ofertas/4/img1.jpg" class="img-fluid">
+        </div>
+        <div class="form-group col-sm-6">
+          Estância das águas
+          <br />
+          Diversão garantida com piscinas, trilhas e muito mais.
+        </div>
 
-                <div>
-                    <div class="row">
-                        <div class="col">
-                            <button type="button" class="btn btn-link">-</button>
-                            1
-                            <button type="button" class="btn btn-link">+</button>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="form-group col-sm-3 d-flex justify-content-end">
-                    31.90
-                </div>
+        <div>
+          <div class="row">
+            <div class="col">
+              <button type="button" class="btn btn-link">-</button>
+              1
+              <button type="button" class="btn btn-link">+</button>
             </div>
+          </div>
+        </div>
 
-            <div class="form-row">
-                <div class="form-group col d-flex justify-content-end">
-                    <h4>Total do pedido: 61.80</h4>
-                </div>
-            </div>
-            <br />
+        <div class="form-group col-sm-3 d-flex justify-content-end">
+          31.90
+        </div>
+      </div>
+      
+      <div class="form-row">
+        <div class="form-group col d-flex justify-content-end">
+          <h4>Total do pedido: 61.80</h4>
+        </div>
+      </div>
+      <br />
 
-            <h5>Dados de entrega</h5>
-            <hr />
+      <h5>Dados de entrega</h5>
+      <hr />
 
-            <div class="form-row">
-                <div class="form-group col-md-6">
-                    <input type="text" class="form-control" placeholder="Endereço" autocomplete="off" minlength="3"
-                        maxlength="120" required name="endereco" ngModel #inputEndereco="ngModel">
-                        <small class="form-text text-success" *ngIf="inputEndereco.valid && inputEndereco.touched">Ok</small>
-                        <small class="form-text text-danger" *ngIf="!inputEndereco.valid && inputEndereco.touched">Endereço inválido</small>
-                </div>
+      <div class="form-row">
 
-                <div class="form-group col-md-2">
-                    <input type="text" class="form-control" placeholder="Número" autocomplete="off" minlength="1"
-                        maxlength="120" required name="numero" ngModel #inputNumero="ngModel">
-                        <small class="form-text text-success" *ngIf="inputNumero.valid && inputNumero.touched">Ok</small>
-                        <small class="form-text text-danger" *ngIf="!inputNumero.valid && inputNumero.touched">Número inválido</small>
-                </div>
+        <div class="form-group col-md-6">
+          <input 
+            type="text" 
+            class="form-control" 
+            placeholder="Endereço" 
+            autocomplete="off" 
+            formControlName="endereco"
+          >
+          <small *ngIf="formulario.get('endereco').valid && formulario.get('endereco').touched" class="form-text text-success">Ok</small>
+          <small *ngIf="formulario.get('endereco').invalid && formulario.get('endereco').touched" class="form-text text-danger">Endereço inválido</small>
+        </div>
 
-                <div class="form-group col-md-4">
-                    <input type="text" class="form-control" placeholder="Complemento" autocomplete="off"
-                        name="complemento" ngModel>
-                </div>
+        <div class="form-group col-md-2">
+          <input 
+            type="text" 
+            class="form-control" 
+            placeholder="Número" 
+            autocomplete="off"
+            formControlName="numero"
+          >
+          <small *ngIf="formulario.get('numero').valid && formulario.get('numero').touched" class="form-text text-success">Ok</small>
+          <small *ngIf="formulario.get('numero').invalid && formulario.get('numero').touched" class="form-text text-danger">Número inválido</small>
+        </div>
 
-            </div>
-            <br />
+        <div class="form-group col-md-4">
+          <input 
+            type="text" 
+            class="form-control" 
+            placeholder="Complemento" 
+            autocomplete="off"
+            formControlName="complemento"
+          >
+        </div>
 
-            <h5>Dados de pagamento</h5>
-            <hr />
+      </div>
+      <br />
 
-            <div class="form-row">
+      <h5>Dados de pagamento</h5>
+      <hr />
 
-                <div class="form-group col-md-3">
-                    <select class="form-control" name="formaPagamento" required ngModel #inputFormaPagamento="ngModel">
-                        <option value="">Selecione uma opção</option>
-                        <option value="dinheiro">Dinheiro</option>
-                        <option value="debito">Débito</option>
-                    </select>
-                    <small class="form-text text-success" *ngIf="inputFormaPagamento.valid && inputFormaPagamento.touched">Ok</small>
-                    <small class="form-text text-danger" *ngIf="!inputFormaPagamento.valid && inputFormaPagamento.touched">Selecione uma opção</small>
-                </div>
-            </div>
+      <div class="form-row">
+          
+        <div class="form-group col-md-3">
+          <select 
+            class="form-control"
+            formControlName="formaPagamento"
+          >
+            <option value="">Selecione uma opção</option>
+            <option value="dinheiro">Dinheiro</option>
+            <option value="debito">Débito</option>
+          </select>
+          <small *ngIf="formulario.get('formaPagamento').valid && formulario.get('formaPagamento').touched" class="form-text text-success">Ok</small>
+          <small *ngIf="formulario.get('formaPagamento').invalid && formulario.get('formaPagamento').touched" class="form-text text-danger">Forma de pagamento inválida</small>
+        </div>
+      </div>
 
-            <hr />
-            <button type="submit" class="btn btn-primary btn-lg">Cofirmar compra</button>
-        </form>
-    </div>
-    <div class="ordem-compra" *ngIf="idPedidoCompra !== undefined">
-        <app-ordem-compra-sucesso [idPedidoCompra]="idPedidoCompra"></app-ordem-compra-sucesso>
-    </div>
+      <hr />
+      <button 
+        type="submit" 
+        class="btn btn-primary btn-lg"
+      >Cofirmar compra</button>
+    </form>
+  </div>
+  <div class="ordem-compra" *ngIf="idPedidoCompra !== undefined">
+      <app-ordem-compra-sucesso [idPedidoCompra]="idPedidoCompra"></app-ordem-compra-sucesso>
+  </div>
 </div>
