--- a/App2/src/app/topo/topo.component.html
+++ b/App2/src/app/topo/topo.component.html
@@ -21,7 +21,7 @@
                 
             </div>
             <div style="padding-top: 5px;" class="col-md-2">
-                <a a href="#"><img class="img-fluid" src="/assets/carrinho.png" /></a>
+                <a routerLink="/ordem-compra"><img class="img-fluid" src="/assets/carrinho.png" /></a>
             </div>
         </div>
     </div>
