--- a/App3/src/app/acesso/acesso.component.html
+++ b/App3/src/app/acesso/acesso.component.html
@@ -1,11 +1,19 @@
 <div class="container">
-  <div class="row">
-    <div class="col-sm-6 d-flex justify-content-end">
-      <app-banner></app-banner>
-    </div>
+    <div class="row">
+        <div class="col-sm-6 d-flex justify-content-end" [@animacao-banner]="estadoBanner">
+            <app-banner></app-banner>
+        </div>
 
-    <div class="col-sm-6 d-flex justify-content-start">
-		<app-login></app-login>
+        <div *ngIf="cadastro; else formLogin">
+            <div class="col-sm-6 d-flex justify-content-start" [@animacao-login]="estadoLogin">
+                <app-cadastro (exibirPainel)="exibirPainel($event)"></app-cadastro>
+            </div>
+        </div>
+
+        <ng-template #formLogin>
+            <div class="col-sm-6 d-flex justify-content-start" [@animacao-login]="estadoLogin">
+                <app-login (exibirPainel)="exibirPainel($event)"></app-login>
+            </div>
+        </ng-template>
     </div>
-  </div>
 </div>
