--- a/App3/src/app/acesso/acesso.component.html
+++ b/App3/src/app/acesso/acesso.component.html
@@ -5,7 +5,10 @@
         </div>
 
         <div *ngIf="cadastro; else formLogin">
-            <div class="col-sm-6 d-flex justify-content-start" [@animacao-login]="estadoLogin">
+            <div class="col-sm-6 d-flex justify-content-start" 
+            [@animacao-login]="estadoLogin"
+            (@animacao-login.start)="inicioDaAnimacao()"
+            (@animacao-login.done)="fimDaAnimacao()">
                 <app-cadastro (exibirPainel)="exibirPainel($event)"></app-cadastro>
             </div>
         </div>
