--- a/App3/src/app/acesso/login/login.component.html
+++ b/App3/src/app/acesso/login/login.component.html
@@ -2,15 +2,15 @@
     <div class="card-body">
         <div class="card-title"></div>
 
-        <!-- <form> -->
+        <form novalidate [formGroup]="formulario" (ngSubmit)="autenticarUsuario()">
             <div class="form-group">
-                <input type="email" class="form-control" placeholder="E-mail">
+                <input formControlName="email" type="email" class="form-control" placeholder="E-mail">
             </div>
             <div class="form-group">
-                <input type="password" class="form-control" placeholder="Senha">
+                <input formControlName="senha" type="password" class="form-control" placeholder="Senha">
             </div>
             <button type="submit" class="btn btn-primary btn-sm btn-block">Entrar</button>
-        <!-- </form> -->
+        </form>
         <hr />
 
         <p class="small text-danger text-center">O nome de usuário inserido não pertence a uma conta. Verifique seu
