--- a/App3/src/app/home/home.component.html
+++ b/App3/src/app/home/home.component.html
@@ -2,13 +2,14 @@
     <div class="container">
         <div class="logo"></div>
         <div>
-            <div class="add-post"></div>
+            <div class="add-post" data-toggle="modal" data-target="#exampleModal"></div>
             <a href="#" (click)="sair()" style="margin-left: 25px;">Sair</a>
         </div>
     </div>
 </nav>
 
 <br /><br /><br />
-<app-publicacoes class="container">
+<div class="container">
     <app-publicacoes></app-publicacoes>
-</app-publicacoes>
+    <app-incluir-publicacao></app-incluir-publicacao>
+</div>
