--- a/App3/src/app/home/incluir-publicacao/incluir-publicacao.component.html
+++ b/App3/src/app/home/incluir-publicacao/incluir-publicacao.component.html
@@ -5,7 +5,7 @@
             <form [formGroup]="formulario" (ngSubmit)="publicar()">
                 <div class="modal-header">
                     <h5 class="modal-title" id="exampleModalLabel">Criar uma publicação</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <button (click)="resetModal()" type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
@@ -14,7 +14,7 @@
                     <input type="text" class="form-control" placeholder="Titulo da publicação" formControlName="titulo">
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+                    <button (click)="resetModal()" type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
                     <button type="submit" class="btn btn-primary">Publicar</button>
                 </div>
             </form>
@@ -23,7 +23,7 @@
         <div class="modal-content" *ngIf="progressoPublicacao === 'andamento'">
             <div class="modal-header">
                 <h5 class="modal-title" id="exampleModalLabel">Publicação em andamento</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <button (click)="resetModal()" type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
@@ -35,7 +35,7 @@
         <div class="modal-content" *ngIf="progressoPublicacao === 'concluido'">
             <div class="modal-header">
                 <h5 class="modal-title" id="exampleModalLabel">Publicação realizada com sucesso</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <button (click)="resetModal()" type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
